--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Crystal Game</title>
+</head>
+<body>
+    <h2></h2>
+        <div>
+            <p id="">Total Scorecore:</p>
+            <p id="">Wins</p>
+            <p id="">Losses</p>
+        </div>
+    <h2></h2>
+        <div>
+            <p>Random #</p>
+            <p>Your Score: </p>
+            <button id="gem1">GEM 1</button>
+            <button id="gem2">GEM 2</button>
+            <button id="gem3">GEM 3</button>
+            <button id="gem4">GEM 4</button>
 
+                <div></div>
+            </p>
+        </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="C:\Users\dflowers\Desktop\game2.js" type="text/javascript"></script>
+</body>
+</html>
