edits on html for totals

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <h2></h2>
         <div>
-            <p id="">Total Scorecore:</p>
-            <p id="">Wins</p>
-            <p id="">Losses</p>
+          
+            <p>Total Score: <span id="score"> </p>
+            <p>Wins: </p><span id="wins"></p>
+            <p>Losses: <span id="losses"></p>
         </div>
     <h2></h2>
         <div>
-            <p>Random #</p>
-            <p>Your Score: </p>
+            <p id="ranNum">Random #</p>
             <button id="gem1">GEM 1</button>
             <button id="gem2">GEM 2</button>
             <button id="gem3">GEM 3</button>
