update to total score

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     <h2></h2>
         <div>
-            <p id="ranNum">Random #</p>
+            <h3>MATCH MY NUMBER: <span id="ranNum"></h3>
             <button id="gem1">GEM 1</button>
             <button id="gem2">GEM 2</button>
             <button id="gem3">GEM 3</button>
