--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
     <h2></h2>
         <div>
             <h3>MATCH MY NUMBER: <span id="ranNum"></h3>
-            <button id="gem1">GEM 1</button>
-            <button id="gem2">GEM 2</button>
-            <button id="gem3">GEM 3</button>
-            <button id="gem4">GEM 4</button>
+            <button class="GEMS" id="gem1">GEM 1</button>
+            <button class="GEMS" id="gem2">GEM 2</button>
+            <button class="GEMS" id="gem3">GEM 3</button>
+            <button class="GEMS" id="gem4">GEM 4</button>
+            <p><span id="gem4dispaly"></span></p>
 
                 <div></div>
             </p>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="C:\Users\dflowers\Desktop\game2.js" type="text/javascript"></script>
+        <script src="assets/game.js" type="text/javascript"></script>
 </body>
 </html>
