--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div>
           
             <p>Total Score: <span id="score"> </p>
-            <p>Wins: </p><span id="wins"></p>
+            <p>Wins: <span id="wins"></p>
             <p>Losses: <span id="losses"></p>
         </div>
     <h2></h2>
@@ -21,12 +21,13 @@
             <button class="GEMS" id="gem2">GEM 2</button>
             <button class="GEMS" id="gem3">GEM 3</button>
             <button class="GEMS" id="gem4">GEM 4</button>
-            <p><span id="gem4dispaly"></span></p>
+           
+            <p><button> <span class="reset">RESET</button></p>
 
                 <div></div>
             </p>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="assets/game.js" type="text/javascript"></script>
+        <script src="H:\game\game.js" type="text/javascript"></script>
 </body>
 </html>
