--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2></h2>
         <div>
-          
+            <p><span id="message"> </p>
             <p>Total Score: <span id="score"> </p>
             <p>Wins: <span id="wins"></p>
             <p>Losses: <span id="losses"></p>
@@ -28,6 +28,6 @@
             </p>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="H:\game\game.js" type="text/javascript"></script>
+        <script src="assets/game.js" type="text/javascript"></script>
 </body>
 </html>
