--- a/index.html
+++ b/index.html
@@ -1,35 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Crystal Game</title>
 </head>
-<body>
-    <h2></h2>
-        <div>
-            <p><span id="message"> </p>
-            <p>Total Score: <span id="score"> </p>
-            <p>Wins: <span id="wins"></p>
-            <p>Losses: <span id="losses"></p>
-        </div>
-    <h2></h2>
-        <div>
-            <h3>MATCH MY NUMBER: <span id="ranNum"></h3>
-            <button class="GEMS" id="gem1">GEM 1</button>
-            <button class="GEMS" id="gem2">GEM 2</button>
-            <button class="GEMS" id="gem3">GEM 3</button>
-            <button class="GEMS" id="gem4">GEM 4</button>
-           
-            <p><button> <span class="reset">RESET</button></p>
 
-                <div></div>
-            </p>
+<body>
+    <container>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4"> <span id="ranNum"></h1>
+                <p class="lead">
+                    <h5> Try to match the number.<br> if you go over the number, you loose. If you match the number, you
+                        win! </h5>
+                </p>
+            </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="assets/game.js" type="text/javascript"></script>
+        </div>
+        <div>
+            <h1>
+                <div class="row">
+                    <div class="col-md-12">
+
+                        <h2>
+                            <p>Total Score: <span id="score"> </p>
+                        </h2>
+                    </div>
+
+                    <div class="col-md-6">
+                        <h2>
+                            <p>Wins: <span id="wins"></p>
+                        </h2>
+                    </div>
+                    <div class="col-md-6">
+                        <h2>
+                            <p>Losses: <span id="losses"></p>
+                        </h2>
+
+                    </div>
+                </div>
+
+                <div class="row">
+<div id="#ballon1"> .....</div>
+                    <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem1"><img
+                            src="assets/images/blue.png"></div>
+                    <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem2"><img
+                            src="assets/images/green.png"></div>
+                    <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem3"><img
+                            src="assets/images/orange.png"></div>
+                    <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem4"><img
+                            src="assets/images/pink.png"></div>
+                </div>
+                <br><br><br>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-text">
+                                &COPY;DeeFG
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+    </container>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="assets/game.js" type="text/javascript"></script>
 </body>
+
 </html>
