--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
                     <h5> Try to match the number.<br> if you go over the number, you loose. If you match the number, you
                         win! </h5>
                 </p>
+                <div class="col-md-12">
+
+                        <h2>
+                            <p> Your Score: <span id="score"> </p>
+                        </h2>
+                    </div>
             </div>
         </div>
         </div>
         <div>
             <h1>
                 <div class="row">
-                    <div class="col-md-12">
-
-                        <h2>
-                            <p>Total Score: <span id="score"> </p>
-                        </h2>
-                    </div>
-
                     <div class="col-md-6">
                         <h2>
                             <p>Wins: <span id="wins"></p>
