--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="C:\Users\dflowers\Desktop\crystal.css">
     <title>Crystal Game</title>
 </head>
 
 <body>
-    <container >
+    <container>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4"> <span id="ranNum"></h1>
@@ -21,12 +21,13 @@
                     <h5> Try to match the number.<br> if you go over the number, you loose. If you match the number, you
                         win! </h5>
                 </p>
+
                 <div class="col-md-12">
 
-                        <h2>
-                            <p> Your Score: <span id="score"> </p>
-                        </h2>
-                    </div>
+                    <h2>
+                        <p> Your Score: <span id="score"> </p>
+                    </h2>
+                </div>
             </div>
         </div>
         </div>
@@ -45,19 +46,21 @@
 
                     </div>
                 </div>
-
+                <br>
+                <div id="ranBox">Your guess will appear here </div>
+                <br>
+                <div class="wrapper"></div>
                 <div class="row">
-
                     <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem1"> <img
-                            src="assets/images/blue.png"></div>
+                            src="C:\Users\dflowers\Desktop\camera.png"></div>
                     <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem2"><img
-                            src="assets/images/green.png"></div>
+                            src="C:\Users\dflowers\Desktop\camera.png"></div>
                     <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem3"><img
-                            src="assets/images/orange.png"></div>
+                            src="C:\Users\dflowers\Desktop\camera.png"></div>
                     <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem4"><img
-                            src="assets/images/pink.png"></div>
+                            src="C:\Users\dflowers\Desktop\camera.png"></div>
                 </div>
-            
+
                 <br><br><br>
                 <div class="row">
                     <div class="col-md-12">
@@ -73,7 +76,9 @@
     </container>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="assets/game.js" type="text/javascript"></script>
+    <script src="C:\Users\dflowers\Desktop\crystal.js" type="text/javascript"></script>
+
+    <meta charset="utf-8" />
 </body>
 
 </html>
