--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="C:\Users\dflowers\Desktop\crystal.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Crystal Game</title>
 </head>
 
 <body>
+  <center>
     <container>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
@@ -21,7 +22,6 @@
                     <h5> Try to match the number.<br> if you go over the number, you loose. If you match the number, you
                         win! </h5>
                 </p>
-
                 <div class="col-md-12">
 
                     <h2>
@@ -52,13 +52,13 @@
                 <div class="wrapper"></div>
                 <div class="row">
                     <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem1"> <img
-                            src="C:\Users\dflowers\Desktop\camera.png"></div>
+                            src="assets/images/blue.png"></div>
                     <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem2"><img
-                            src="C:\Users\dflowers\Desktop\camera.png"></div>
+                            src="assets/images/pink.png"></div>
                     <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem3"><img
-                            src="C:\Users\dflowers\Desktop\camera.png"></div>
+                            src="assets/images/green.png"></div>
                     <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem4"><img
-                            src="C:\Users\dflowers\Desktop\camera.png"></div>
+                            src="assets/images/orange.png"></div>
                 </div>
 
                 <br><br><br>
@@ -74,9 +74,9 @@
                     </div>
                 </div>
     </container>
-
+ </center>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="C:\Users\dflowers\Desktop\crystal.js" type="text/javascript"></script>
+    <script src="assets/game.js" type="text/javascript"></script>
 
     <meta charset="utf-8" />
 </body>
