upload edits push

--- a/index.html
+++ b/index.html
@@ -13,68 +13,70 @@
 </head>
 
 <body>
-  <center>
-    <container>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4"> <span id="ranNum"></h1>
-                <p class="lead">
-                    <h5> Try to match the number.<br> if you go over the number, you loose. If you match the number, you
-                        win! </h5>
-                </p>
-                <div class="col-md-12">
+    <center>
+        <container>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 class="display-4"> <span id="ranNum"></h1>
+                    <p class="lead">
+                        <h5> Try to match the number.<br> if you go over the number, you loose. If you match the number,
+                            you
+                            win! </h5>
+                    </p>
+                    <div class="col-md-12">
 
-                    <h2>
-                        <p> Your Score: <span id="score"> </p>
-                    </h2>
+                        <h2>
+                            <p> Your Score: <span id="score"> </p>
+                        </h2>
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
-        <div>
-            <h1>
-                <div class="row">
-                    <div class="col-md-6">
-                        <h2>
-                            <p>Wins: <span id="wins"></p>
-                        </h2>
-                    </div>
-                    <div class="col-md-6">
-                        <h2>
-                            <p>Losses: <span id="losses"></p>
-                        </h2>
+            </div>
+            <div>
+                <h1>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h2>
+                                <p>Wins: <span id="wins"></p>
+                            </h2>
+                        </div>
+                        <div class="col-md-6">
+                            <h2>
+                                <p>Losses: <span id="losses"></p>
+                            </h2>
 
+                        </div>
                     </div>
-                </div>
-                <br>
-                <div id="ranBox">Your guess will appear here </div>
-                <br>
-                <div class="wrapper"></div>
-                <div class="row">
-                    <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem1"> <img
-                            src="assets/images/blue.png"></div>
-                    <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem2"><img
-                            src="assets/images/pink.png"></div>
-                    <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem3"><img
-                            src="assets/images/green.png"></div>
-                    <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem4"><img
-                            src="assets/images/orange.png"></div>
-                </div>
+                    <br>
+                    <div id="ranBox">Your guess will appear here </div>
+                    <br>
+                    <div class="wrapper"></div>
+                    <div class="row">
+                        <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem1"> <img
+                                src="assets/images/blue.png"></div>
+                        <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem2"><img
+                                src="assets/images/pink.png"></div>
+                        <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem3"><img
+                                src="assets/images/green.png"></div>
+                        <div class="col-md-3" class="img-fluid" alt="Responsive image" class="GEMS" id="gem4"><img
+                                src="assets/images/orange.png"></div>
+                    </div>
 
-                <br><br><br>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="card">
-                            <div class="card-text">
-                                &COPY;DeeFG
+                    <br><br><br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="card-text">
+                                    &COPY;DeeFG
+                                </div>
+
                             </div>
 
                         </div>
-
                     </div>
-                </div>
-    </container>
- </center>
+
+        </container>
+    </center>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="assets/game.js" type="text/javascript"></script>
 
