spacing and directions

--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
                 <div class="container">
                     <h1 class="display-4"> <span id="ranNum"></h1>
                     <p class="lead">
-                        <h5> Try to match the number.<br> if you go over the number, you loose. If you match the number,
-                            you
-                            win! </h5>
+                        <h5> Try to match the number.<br> Click on the balloon to see its value.  Choose wisely, every click adds to your score! </h5>
                     </p>
                     <div class="col-md-12">
-
                         <h2>
                             <p> Your Score: <span id="score"> </p>
                         </h2>
@@ -48,7 +45,7 @@
                         </div>
                     </div>
                     <br>
-                    <div id="ranBox">Your guess will appear here </div>
+                    <div id="ranBox">Your balloon value will appear here </div>
                     <br>
                     <div class="wrapper"></div>
                     <div class="row">
